c3prj1_deck/grade.txt
Grading at Wed 04 Oct 2023 08:01:34 AM UTC
Compiling deck.c
deck.c: In function ‘add_empty_card’:
deck.c:51:13: error: invalid type argument of ‘->’ (have ‘card_t’ {aka ‘struct card_tag’})
   51 |   empty_card->value=0;
      |             ^~
deck.c:52:13: error: invalid type argument of ‘->’ (have ‘card_t’ {aka ‘struct card_tag’})
   52 |   empty_card->suit=0;
      |             ^~
deck.c: In function ‘make_deck_exclude’:
deck.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
